--- a/Readme
+++ b/Readme
@@ -14,3 +14,12 @@ Open file .env and change:
     MONGODB_URL = mongodb+srv://remote:admin@imusical.biyuh.mongodb.net/iMusical?retryWrites=true&w=majority
     JWT_SECRET = motNuaSuThatChuaChacLaSuThat
     JWT_EXPIRE = 2h
+
+
+## Quick start
+
+In Terminal:
+
+    npm run dev (to run both server and client)
+    npm run start-client (to run only client)
+    npm run start-server (to run only server)
